# dynamic-dpo-v4

./: .gitignore  AGENT.md  README.md  conversation-history-2026-03-24.md  conversation-history-e-dpo-pairy.md  hh-helpful-4examples.json  pyproject.toml  release_checklist.md  requirements.txt
accelerate_configs/: fsdp.yaml  fsdp_2gpu_sharded.yaml  fsdp_no_cpu_ram_efficient_loading.yaml
alignment/: __init__.py  configs.py  data.py  model_utils.py
dpo_offline/: run_llama3_margin_dpo.sh  run_llama3_margin_dpo_hh_helpful.sh
scripts/: README.md  alpha_dpo_trainer.py  beta_dpo_trainer.py  epsilon_dpo_trainer.py  export_fsdp_checkpoint.py  margin_dpo_trainer.py  pretokenize_preferences.py  run_alpha_dpo.py  run_beta_dpo.py  run_cpo.py  run_dpo.py  run_epsilon_dpo.py  run_ipo.py  run_kto.py  run_margin_dpo.py  run_orpo.py  run_preference_utils.py  run_robust_dpo.py  run_sft.py  run_simpo.py  run_slic_hf.py  save_utils.py  sft.py  simpo_trainer.py  slic_hf_trainer.py  tokenized_dpo_trainer.py  torch_dtype_utils.py  trainer_configs.py  validate_and_upload.py
tests/: restructure_validation.md  test_epsilon_dpo_full_trainer_parity.py  test_epsilon_dpo_math.py  test_epsilon_dpo_math_only_parity.py  test_epsilon_dpo_parity.py  test_hf_access_preflight.py  test_hh_preprocessing.py  test_kto_runtime.py  test_margin_dataset_upload.py  test_margin_logging.py  test_native_runners.py  test_preprocessing_logging.py  test_qwen_support.py  test_slic_hf_math.py
tools/: epsilon_dpo_parity.py  epsilon_dpo_parity_checklist.md  export_fsdp_checkpoint.py  pretokenize_preferences.py  validate_and_upload.py
training_configs/: llama-3-8b-base-beta-dpo-2gpu-smoke.yaml  llama-3-8b-base-beta-dpo-2gpu-stability-debug.yaml  llama-3-8b-base-beta-dpo-4gpu-first-real-run.yaml  llama-3-8b-base-beta-dpo-4gpu-half-debug.yaml  llama-3-8b-base-beta-dpo-4gpu-pre-first-real-run.yaml  llama-3-8b-base-beta-dpo-4gpu-rerun.yaml  llama-3-8b-base-beta-dpo-4xh100-test.yaml  llama-3-8b-base-beta-dpo-smoke.yaml  llama-3-8b-base-beta-dpo.yaml  llama-3-8b-base-margin-dpo-2xh100.yaml  llama-3-8b-base-margin-dpo-4xh100-real.yaml  llama-3-8b-base-margin-dpo-4xh100-ref-stability-debug.yaml  llama-3-8b-base-margin-dpo-4xh100-test.yaml  llama-3-8b-base-margin-dpo-4xh100.yaml  llama-3-8b-base-margin-dpo-hh-4xh100-debug.yaml  llama-3-8b-base-margin-dpo-hh-4xh100.yaml  llama-3-8b-base-margin-dpo-smoke.yaml  llama-3-8b-base-margin-dpo.yaml  (+6 more)
(+108 files in other folders)
