[project]
name = "dynamic-dpo-v4"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "torch==2.3.1",
  "transformers==4.44.2",
  "datasets==2.21.0",
  "accelerate==0.34.2",
  "trl==0.10.1",
  "huggingface_hub==0.24.6",
  "safetensors==0.4.5",
  "sentencepiece==0.2.0",
]

[project.optional-dependencies]
ultra = [
  "flash-attn==2.5.8; platform_system == 'Linux'",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.5.8"
requires-dist = ["torch", "einops"]
