[project]
name = "dynamic-dpo-v4"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
  "torch==2.3.1",
  "transformers==4.44.2",
  "datasets==2.21.0",
  "accelerate==0.34.2",
  "trl==0.10.1",
  "huggingface_hub==0.24.6",
  "safetensors==0.4.5",
  "sentencepiece==0.2.0",
  "numpy==1.26.4",
  "peft==0.11.1",
  "PyYAML==6.0.1",
  "packaging==24.1",
]

[project.optional-dependencies]
ultra = [
  "flash-attn==2.5.8; platform_system == 'Linux'",
]
wandb = [
  "wandb==0.17.5",
]
deepspeed = [
  "deepspeed==0.12.2",
]
quantization = [
  "bitsandbytes==0.43.1",
]
dev = [
  "pytest==8.2.1",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.5.8"
requires-dist = ["torch", "einops"]
